sqlplot-rs-derive/tests/test_code/invalid_rename_special_char_test.rs
use sqlplot_rs_derive::ResultLine;

#[derive(ResultLine)]
struct MyStruct {
    #[result(name="6atoken")]
    a: &'static str,
    b: u32,
    c: f64,
}
fn main() {}